PonyDevs, not PonyDev

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PonyDev: Soon</title>
+    <title>PonyDevs: Soon</title>
     <link rel="stylesheet" href="fonts/celestia/font.css">
     <link rel="stylesheet" href="fonts/proxima-soft/font.css">
     <style>
